Finished toggle compoment. Testing more 'raspbian' colors

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 
   <!-- mdl -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.teal-deep_purple.min.css" />
+  <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.pink-lime.min.css" />
 
 </head>
 
