--- a/src/bad.html
+++ b/src/bad.html
@@ -9,6 +9,8 @@
         font-size: 25px;
       }
     </style>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <div align = "center">
